[gd_scene load_steps=2 format=3 uid="uid://ctw7qcbvbrhvr"]

[ext_resource type="Script" path="res://Scripts/NewClan/NewClanStep1.gd" id="1_a7ar6"]

[node name="NewClanStep1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7ar6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(1280, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
text = "Choisissez une Race
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="ThaRoonButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Tha'Roon"

[node name="ObblinoxButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Obblinox"

[node name="EaggraButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Eaggra"

[node name="ShamaLiButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ShamaLi"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retour"

[node name="NextButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Suivant"
